# MDViewer

./: .gitignore  CLAUDE.md  README.md  build_macos.sh  mdviewer.spec  pyproject.toml  requirements.txt  run_mdviewer.py
.claude/agents/: architect.md  core-engine-dev.md  packager.md  qa-verifier.md  ui-dev.md
.claude/skills/desktop-app-qa/: SKILL.md
.claude/skills/markdown-rendering/: SKILL.md
.claude/skills/mdviewer-orchestrator/: SKILL.md
.claude/skills/pyinstaller-packaging/: SKILL.md
.claude/skills/pyinstaller-packaging/references/: macos-packaging.md
.claude/skills/pyside6-app-patterns/: SKILL.md
.claude/skills/python-desktop-architecture/: SKILL.md
.github/workflows/: build-macos.yml
_workspace/: 01_architect_blueprint.md  02_core_engine_notes.md  03_ui_notes.md  04_qa_report.md  05_package_notes.md  06_clipboard_feature_design.md  07_editor_feature_design.md  08_wysiwyg_feature_design.md  09_wordprocessor_ui_design.md  10_export_feature_design.md  10_table_feature_design.md  11_qa_export_report.md
samples/: demo.md  remote_img_test.md
src/mdviewer/: __init__.py  __main__.py  app.py  exporter.py  file_watcher.py  main_window.py  paths.py  renderer.py  settings.py  theme.py
src/mdviewer/resources/styles/: .gitkeep  github-dark.css  github-light.css
tests/: conftest.py  test_convert.py  test_demo_render.py  test_export.py  test_file_watcher.py  test_renderer.py  test_table.py
